src/objects/SBQQ__ProductAction__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductExternalId__c</fullName>
        <formula>SBQQ__Product__r.ExternalId__c</formula>
        <label>ProductExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RuleExternalId__c</fullName>
        <formula>SBQQ__Rule__r.ExternalId__c</formula>
        <label>RuleExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>